# sndio-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: play_mp3.rs  play_wav.rs  record_wav.rs
src/: lib.rs
